Changelog Legend:
----

[+] = Added
[*] = Changed
[^] = Moved
[=] = No Changes
[x] = Deleted
[!] = Bugs

(06/27/14) - Improvements - Version 1.9.6.6

[!] Update NL translation to fix theme options bug
[*] Improve page template switch from Responsive v2.0
[*] Enclose add_image_size within a function

----

(06/20/14) - Improvements - Version 1.9.6.4-5

[+] Change page templates when reverting from Responsive v2.0
[*] Move tags under categories under posts

----

(06/11/14) - Improvements - Version 1.9.6.3

[*] Fix minified js

----

(06/06/14) - Improvements - Version 1.9.6.2

[*] Updated Hindi Translation
[*] Updated FitVids.js in minified version
[*] Changed some codestyling

----

(05/30/14) - Improvements - Version 1.9.6.1

[*] Updated Ukrainian, Bulgarian, German, French(Canada), Hindi and Dutch Translation
[*] Updated FitVids.js in development version

----

(05/23/14) - Improvements - Version 1.9.6.0

[*] Updated Hungarian Translation
[+] Added new Canadian French Translation

----

(05/16/14) - Improvements - Version 1.9.5.9

[*] Updated new landing page for Responsive 2.o
[*] Updated Danish Translation

----

(05/09/14) - Improvements - Version 1.9.5.8

[*] Readded default logo
[*] Updated translations

----

(04/30/14) - Improvements - Version 1.9.5.7

[+] Added new recommended Plugin
[*] Updated logo
[*] Changed some code styling
[!] Fixed translations files

----

(04/22/14) - Improvements - Version 1.9.5.6

[*] Update POT File
[*] Update translations
[*] Improve strings for i18n
[!] Fixed wp_editor issue with WordPress 3.9

----

(04/16/14) - Improvements - Version 1.9.5.5

[*] Change post layout selection from radio buttons to dropdown menu
[!] Fixed "Default" showing twice on post layout

----

(04/08/14) - Improvements - Version 1.9.5.4

[*] Updated POT file
[*] Added logo to featured image
[!] Fixed check if Yoast SEO breadcrumbs activated
[!] Fixed image links in admin area

----

(03/14/14) - Improvements - Version 1.9.5.3
