@@ -40,33 +40,27 @@ Template Name: Sitemap
 						<div class="grid col-300">
 							<div class="widget-title"><h3><?php _e( 'Categories', 'responsive' ); ?></h3></div>
 							<ul><?php wp_list_categories( 'sort_column=name&optioncount=1&hierarchical=0&title_li=' ); ?></ul>
-						</div>
-						<!-- end of .col-300 -->
+						</div><!-- end of .col-300 -->
 
 						<div class="grid col-300">
 							<div class="widget-title"><h3><?php _e( 'Latest Posts', 'responsive' ); ?></h3></div>
 							<ul><?php $archive_query = new WP_Query( 'posts_per_page=-1' );
 								while( $archive_query->have_posts() ) : $archive_query->the_post(); ?>
 									<li>
-										<a href="<?php the_permalink() ?>" rel="bookmark"
-										   title="<?php printf( __( 'Permanent Link to %s', 'responsive' ), the_title_attribute( 'echo=0' ) ); ?>"><?php the_title(); ?></a>
+										<a href="<?php the_permalink() ?>" rel="bookmark" title="<?php printf( __( 'Permanent Link to %s', 'responsive' ), the_title_attribute( 'echo=0' ) ); ?>"><?php the_title(); ?></a>
 									</li>
 								<?php endwhile; ?>
 							</ul>
-						</div>
-						<!-- end of .col-300 -->
+						</div><!-- end of .col-300 -->
 
 						<div class="grid col-300 fit">
 							<div class="widget-title"><h3><?php _e( 'Pages', 'responsive' ); ?></h3></div>
 							<ul><?php wp_list_pages( "title_li=" ); ?></ul>
-						</div>
-						<!-- end of .col-300 fit -->
+						</div><!-- end of .col-300 fit -->
 
-					</div>
-					<!-- end of #widgets -->
+					</div><!-- end of #widgets -->
 					<?php wp_link_pages( array( 'before' => '<div class="pagination">' . __( 'Pages:', 'responsive' ), 'after' => '</div>' ) ); ?>
-				</div>
-				<!-- end of .post-entry -->
+				</div><!-- end of .post-entry -->
 
 				<div class="post-edit"><?php edit_post_link( __( 'Edit', 'responsive' ) ); ?></div>
 			</div><!-- end of #post-<?php the_ID(); ?> -->
