@@ -8,6 +8,13 @@ Changelog Legend:
 [x] = Deleted
 [!] = Bugs
 
+(07/04/14) - Improvements - Version 1.9.6.7
+
+[*] Update cs_CZ translation
+[*] Small code style improvements
+
+----
+
 (06/27/14) - Improvements - Version 1.9.6.6
 
 [!] Update NL translation to fix theme options bug
